styles/default.css
/* ... */
#right .info .button:hover {
    background: rgba(0, 124, 137, 0.1);
}
#bottom {
    position: absolute;
    width: 100%;
    height: 98px;
    bottom: 0;
    z-index: 10;
    border-top: 2px solid rgb(98, 98, 98);

    background:-webkit-linear-gradient(bottom, rgba(0, 0, 0, 0.7) 0%, rgba(0, 0, 0, 0.48) 50%, rgba(0, 0, 0, 0.4) 100%);
    background:-moz-linear-gradient(bottom, rgba(0, 0, 0, 0.7) 0%, rgba(0, 0, 0, 0.48) 50%, rgba(0, 0, 0, 0.4) 100%);
    background:-ms-linear-gradient(bottom, rgba(0, 0, 0, 0.7) 0%, rgba(0, 0, 0, 0.48) 50%, rgba(0, 0, 0, 0.4) 100%);
    background:-o-linear-gradient(bottom, rgba(0, 0, 0, 0.7) 0%, rgba(0, 0, 0, 0.48) 50%, rgba(0, 0, 0, 0.4) 100%);
    background:linear-gradient(bottom, rgba(0, 0, 0, 0.7) 0%, rgba(0, 0, 0, 0.48) 50%, rgba(0, 0, 0, 0.4) 100%);
}
#bottom .controls {
    width: 230px;
    height: 80px;
    padding-top: 15px;
    text-align: center;
    display: inline-block;
}
#bottom .controls  .border {
    display: inline-block;
    margin: 5px 0px 8px 0px;

    border-radius: 50px;
    background:-webkit-linear-gradient(bottom, rgba(255, 255, 255, 0.4) 0%, rgba(0, 0, 0, 0.4) 100%);
    background:-moz-linear-gradient(bottom, rgba(255, 255, 255, 0.4) 0%, rgba(0, 0, 0, 0.4) 100%);
    background:-ms-linear-gradient(bottom, rgba(255, 255, 255, 0.4) 0%, rgba(0, 0, 0, 0.4) 100%);
    background:-o-linear-gradient(bottom, rgba(255, 255, 255, 0.4) 0%, rgba(0, 0, 0, 0.4) 100%);
    background:linear-gradient(bottom, rgba(255, 255, 255, 0.4) 0%, rgba(0, 0, 0, 0.4) 100%);
}
#bottom .controls  .border.middle {
    margin: 5px 5px 0px 5px;
}

#bottom .controls .prev,
#bottom .controls .playpause,
#bottom .controls  .next {
    cursor: pointer;
    display: block;
    width: 33px;
    height: 33px;
    margin: 5px;
    border-radius: 50px;
    position: relative;

    background: -webkit-linear-gradient(bottom, #3E3E3E 0%, #BCBCBC 100%);
    background: -moz-linear-gradient(bottom, #3E3E3E 0%, #BCBCBC 100%);
    background: -ms-linear-gradient(bottom, #3E3E3E 0%, #BCBCBC 100%);
    background: -o-linear-gradient(bottom, #3E3E3E 0%, #BCBCBC 100%);
    background: linear-gradient(bottom, #3E3E3E 0%, #BCBCBC 100%);
}
#bottom .controls .prev:active,
#bottom .controls .playpause:active,
#bottom .controls  .next:active {
    box-shadow: 0px 0px 5px #000, inset 0px 0px 5px #000;
}
#bottom .controls .prev:after {
    content: url(/images/prev.png);
    width: 14px;
    height: 13px;
    position: absolute;
    top: 10px;
    left: 8px;
}
#bottom .controls .playpause {
    width: 50px;
    height: 50px;
}
#bottom .controls .playpause:after {
    content: url(/images/play.png);
    width: 17px;
    height: 15px;
    position: absolute;
    top: 18px;
    left: 18px;
}
.playing #bottom .controls .playpause:after {
    content: url(/images/pause.png);
}
#bottom .controls .next:after {
    content: url(/images/next.png);
    width: 13px;
    height: 13px;
    position: absolute;
    top: 11px;
    left: 11px;
}
#bottom .info {
    position: absolute;
    top: 0px;
    left: 230px;
    height: 43px;
    width: 100%;
    padding-right: 465px; /* #controls.width + volume.width */
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
}
#bottom .info .title {
    margin-top: 15px;
    padding: 0 45px;
    text-align: center;
    font-size: 13px;
    font-weight: bold;
    text-shadow: 0px 1px 1px rgba(255, 255, 255, 0.5);
    cursor: pointer;
}
#bottom .share-wrapper {
    position: absolute;
    top: 35px;
    right: 200px;
    z-index: 15;
}
#bottom .share-wrapper .flattr,
#bottom .share-wrapper .share {
    float: right;
    width: 34px;
    height: 32px;
    cursor: pointer;
}
#bottom .share-wrapper .share {
    display: none;
}
#bottom .share-wrapper .flattr {
    background: url(/images/flattr-color.png) no-repeat center center;
    position: relative;
    opacity: 1;
    -webkit-transition: 0.5s all linear;
    -moz-transition: 0.5s all linear;
    -ms-transition: 0.5s all linear;
    -o-transition: 0.5s all linear;
    transition: 0.5s all linear;
}
#bottom .share-wrapper .flattr:before {
    background: url(/images/flattr.png) no-repeat center center;
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    opacity: 1;
    -webkit-transition: 0.5s all linear;
    -moz-transition: 0.5s all linear;
    -ms-transition: 0.5s all linear;
    -o-transition: 0.5s all linear;
    transition: 0.5s all linear;
}
#bottom .share-wrapper .flattr:hover:before {
    opacity: 0;
    -webkit-transition: 0.5s all linear;
    -moz-transition: 0.5s all linear;
    -ms-transition: 0.5s all linear;
    -o-transition: 0.5s all linear;
    transition: 0.5s all linear;
}
#bottom .share-wrapper .flattr:active {
    background: url(/images/flattr-active.png) no-repeat center center;
}
#bottom .share-wrapper .flattr .badge {
    display: none;

    background: red;
    color: white;

    border: 2px solid red;
    border-radius: 5px;
    font-size: 9px;

    position: absolute;
    top: -2px;
    right: -2px;
}
#bottom .timeline-wrapper {
    position: absolute;
    top: 43px;
    left: 230px;
    height: 15px;
    width: 100%;
    padding-right: 465px; /* #controls.width + volume.width */
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
}
#bottom .timeline-wrapper .position,
#bottom .timeline-wrapper .length{
    position: absolute;
    top: 0px;
    text-shadow: 0px 1px 1px rgba(255, 255, 255, 0.8);
    text-align: center;
    width: 45px;
    display: block;
}
#bottom .timeline-wrapper .position {
    left: 0px;
}
#bottom .timeline-wrapper .length {
    right: 465px; /* #controls.width + volume.width + 5 */
}
#bottom .timeline-wrapper .timeline {
    width: auto;
    height: 15px;
    margin: 0px 45px;
    background: #414141;
    border-radius: 50px;
    box-shadow: inset 3px 3px 3px #2C2C2C;
}
/* ... */

